# Fundamental UI widgets
add_subdirectory(basic)

# Functionality shared between the main menu and the WUI
add_subdirectory(shared)

# The Widelands main menu
add_subdirectory(fsmenu)

# Functionality shared between the editor and in-game
add_subdirectory(wui)

# The in-game user interface
add_subdirectory(game)

# The editor's user interface
add_subdirectory(editor)

