add_subdirectory(lua)
add_subdirectory(json)

wl_library(website_common
  SRCS
    website_common.cc
    website_common.h
  DEPENDS
    base
    base_exceptions
    graphic
    io_filesystem
)

wl_binary(wl_create_spritesheet
  SRCS
    create_spritesheet.cc
  DEPENDS
    base
    base_macros
    graphic
    graphic_animation
    graphic_image_io
    graphic_surface
    io_filesystem
    logic
    logic_map_objects
    lua_tree
    website_common
)


wl_binary(wl_map_info
  SRCS
    map_info.cc
  DEPENDS
    base
    graphic
    graphic_image_io
    graphic_minimap_renderer
    graphic_surface
    io_fileread
    io_filesystem
    json
    logic
    logic_map
    map_io_map_loader
    website_common
)

wl_binary(wl_map_object_info
  SRCS
    map_object_info.cc
  DEPENDS
    base
    base_macros
    graphic
    io_fileread
    io_filesystem
    json
    logic
    logic_map_objects
    logic_tribe_basic_info
    website_common
)
