file(GLOB WL_TEST_ECONOMY_SRCS *.cc)

add_definitions( -DBOOST_TEST_DYN_LINK )

add_executable(test_economy ${WL_TEST_ECONOMY_SRCS})

target_link_libraries(test_economy widelands_ai widelands_profile widelands_logic widelands_economy)
target_link_libraries(test_economy widelands_economy widelands_ai widelands_map_io widelands_logic widelands_ui_basic)
target_link_libraries(test_economy widelands_editor widelands_logic widelands_map_io widelands_editor_ui_menus widelands_editor_tools widelands_graphic widelands_ui_basic widelands_profile widelands_ui_fsmenu widelands_wui widelands_io)
target_link_libraries(test_economy widelands_editor_tools widelands_ui_basic widelands_graphic widelands_logic widelands_wui)
target_link_libraries(test_economy widelands_editor_ui_menus widelands_map_io widelands_graphic widelands_ui_basic widelands_profile widelands_logic widelands_editor_tools widelands_wui widelands_ui_fsmenu widelands_io)
target_link_libraries(test_economy widelands_map_io widelands_wui widelands_ui_basic widelands_profile widelands_logic widelands_editor widelands_graphic widelands_economy)
target_link_libraries(test_economy widelands_game_io widelands_map_io widelands_wui widelands_profile widelands_logic widelands_economy widelands_io)
target_link_libraries(test_economy widelands_graphic widelands_sound widelands_wui widelands_logic widelands_economy widelands_ui_basic widelands_profile widelands_io)
target_link_libraries(test_economy widelands_io widelands_io_filesystem)
target_link_libraries(test_economy widelands_io_filesystem)
target_link_libraries(test_economy widelands_logic widelands_main widelands_ai widelands_scripting widelands_sound widelands_wui widelands_graphic widelands_economy widelands_map_io widelands_editor widelands_ui_fsmenu widelands_network widelands_game_io widelands_ui_basic widelands_profile widelands_io)
target_link_libraries(test_economy widelands_map_io widelands_wui widelands_graphic widelands_logic widelands_profile widelands_economy widelands_io)
target_link_libraries(test_economy widelands_network widelands_ui_basic widelands_profile widelands_logic widelands_ui_fsmenu widelands_wui widelands_io)
target_link_libraries(test_economy widelands_profile widelands_logic widelands_io)
target_link_libraries(test_economy widelands_scripting widelands_wui widelands_logic)
target_link_libraries(test_economy widelands_sound widelands_wui widelands_profile widelands_logic widelands_io)
target_link_libraries(test_economy widelands_map_io widelands_logic widelands_editor widelands_profile)
target_link_libraries(test_economy widelands_ui_basic widelands_logic widelands_economy widelands_graphic widelands_sound widelands_profile widelands_io widelands_ui_fsmenu)
target_link_libraries(test_economy widelands_ui_fsmenu widelands_logic widelands_sound widelands_wui widelands_graphic widelands_game_io widelands_network widelands_map_io widelands_ui_basic widelands_profile widelands_io)
target_link_libraries(test_economy widelands_wui widelands_sound widelands_profile widelands_logic widelands_editor widelands_graphic widelands_economy widelands_game_io widelands_ui_fsmenu widelands_ui_basic widelands_io)

target_link_libraries(test_economy ${Boost_LIBRARIES})
target_link_libraries(test_economy ${PNG_LIBRARY})
target_link_libraries(test_economy ${ZLIB_LIBRARY})
target_link_libraries(test_economy ${JPEG_LIBRARY})
target_link_libraries(test_economy ${TIFF_LIBRARY})
target_link_libraries(test_economy ${SDL_LIBRARY})
target_link_libraries(test_economy ${SDLIMAGE_LIBRARY})
target_link_libraries(test_economy ${SDLMIXER_LIBRARY})
target_link_libraries(test_economy ${SDLNET_LIBRARY})
target_link_libraries(test_economy ${SDLTTF_LIBRARY})
target_link_libraries(test_economy ${LUA_LIBRARY})
target_link_libraries(test_economy ${SDLGFX_LIBRARY})
target_link_libraries(test_economy ${GGZ_CORE_LIBRARY})

target_link_libraries(test_economy widelands_main)

add_test(test_economy test_economy)
